--- a/JavaScript/ObjectProgramming/CoursewareExercises/TheFunctionOfGetSumFunctions.html
+++ b/JavaScript/ObjectProgramming/CoursewareExercises/TheFunctionOfGetSumFunctions.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>This is the function of sue for place</title>
+    <title>This is the function of cumulative</title>
 </head>
 <body>
 <script>
