--- a/JavaScript/ObjectProgramming/CoursewareExercises/TheFunctionOfReverseFunctions.html
+++ b/JavaScript/ObjectProgramming/CoursewareExercises/TheFunctionOfReverseFunctions.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>This is the function of use the function of reverse</title>
+    <title>This is the function of reverse function</title>
 </head>
 <body>
 <script>
