--- a/JavaScript/ObjectProgramming/TextBookExercise/TheFunctionOfMathFunctions.html
+++ b/JavaScript/ObjectProgramming/TextBookExercise/TheFunctionOfMathFunctions.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>The function of the function of math functions</title>
+    <title>The function of math functions</title>
   <style>
     .inputTxt{
       height: 500px;
