--- a/JavaScript/ObjectProgramming/TextBookExercise/TheFunctionOfUseDateFunction.html
+++ b/JavaScript/ObjectProgramming/TextBookExercise/TheFunctionOfUseDateFunction.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>This is the function of use the function of date function</title>
+    <title>This is the function of use date function</title>
 </head>
 <body>
 <script>
