--- a/JavaScript/ObjectProgramming/TextBookExercise/TheFunctionOfUseDateFunctionsOnThePage.html
+++ b/JavaScript/ObjectProgramming/TextBookExercise/TheFunctionOfUseDateFunctionsOnThePage.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>This is the function of the function of date function on the page</title>
+    <title>This is the function of use date function on the page</title>
 </head>
 <body>
 <ul>
