--- a/JavaScript/ObjectProgramming/TextBookExercise/TheFunctionOfUseTheFunctionImplementJSONOutput.html
+++ b/JavaScript/ObjectProgramming/TextBookExercise/TheFunctionOfUseTheFunctionImplementJSONOutput.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>This is the fucntion of the fucntion use thr function Implement json output</title>
+    <title>This is the fucntion of  Implement json output</title>
 </head>
 <body>
 <script>
