--- a/JavaScript/ObjectProgramming/TextBookExercise/TheFunctionOfUseTheFunctionToCreateACarousel.html
+++ b/JavaScript/ObjectProgramming/TextBookExercise/TheFunctionOfUseTheFunctionToCreateACarousel.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>This is the function of use the function to create a carousel</title>
+    <title>This is the function of create a carousel</title>
 </head>
 <body>
 
