--- a/JavaScript/ObjectProgramming/CoursewareExercises/TheFunctionOfArgumentReturnMaxFunctions.html
+++ b/JavaScript/ObjectProgramming/CoursewareExercises/TheFunctionOfArgumentReturnMaxFunctions.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>This is the function of use the function of argument return Max</title>
+    <title>This is the function of use argument functions return Max</title>
 </head>
 <body>
 <script>
