--- a/JavaScript/ObjectProgramming/CoursewareExercises/TheFunctionOfArgumentsFunctions.html
+++ b/JavaScript/ObjectProgramming/CoursewareExercises/TheFunctionOfArgumentsFunctions.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>This is the function of use the function of argument</title>
+    <title>This is the function of use argument function</title>
 </head>
 <body>
 <script>
