--- a/JavaScript/ObjectProgramming/CoursewareExercises/TheFunctionOfDefindTheFunctionAndOutputItFunctions.html
+++ b/JavaScript/ObjectProgramming/CoursewareExercises/TheFunctionOfDefindTheFunctionAndOutputItFunctions.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>This is the function of defind the function and  output title</title>
+    <title>This is the function of defind the function and  output</title>
 </head>
 <body>
 <script>
