--- a/JavaScript/ObjectProgramming/CoursewareExercises/TheFunctionOfDetemineIfItIsALeapYearFunctions.html
+++ b/JavaScript/ObjectProgramming/CoursewareExercises/TheFunctionOfDetemineIfItIsALeapYearFunctions.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>This is the function of the function of detemine if it is a leap year</title>
+    <title>This is the function of detemine if it is a leap year</title>
 </head>
 <body>
 <script>
