--- a/JavaScript/ObjectProgramming/CoursewareExercises/TheFunctionOfGetMAXFunctions.html
+++ b/JavaScript/ObjectProgramming/CoursewareExercises/TheFunctionOfGetMAXFunctions.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>This is the function of use the function of getMAX()</title>
+    <title>This is the function of use getMAX() function</title>
 </head>
 <body>
 <script>
