--- a/JavaScript/ObjectProgramming/TextBookExercise/TheFunctionOfUseCycleFunctionsOutputMessage.html
+++ b/JavaScript/ObjectProgramming/TextBookExercise/TheFunctionOfUseCycleFunctionsOutputMessage.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>This is the function of use the function of cycle output message</title>
+    <title>This is the function of use cycle output message</title>
 </head>
 <body>
 <script>
