--- a/JavaScript/ObjectProgramming/TextBookExercise/TheFunctionOfUseJSONFunctionsOutputTheMessageOfBook.html
+++ b/JavaScript/ObjectProgramming/TextBookExercise/TheFunctionOfUseJSONFunctionsOutputTheMessageOfBook.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>This is the function of use the function of json output the message of book </title>
+    <title>This is the function of use json output the message of book </title>
 </head>
 <body>
 <script>
