--- a/JavaScript/ObjectProgramming/CoursewareExercises/TheFunctionOfGetSumFunctions.html
+++ b/JavaScript/ObjectProgramming/CoursewareExercises/TheFunctionOfGetSumFunctions.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 <script>
+    //使区间内的数累加
     function getSum(num1,num2){
         var sum = 0;
         for (var num1; i <=num2; i++) {
