--- a/Html5+Css3/Html5/BasicOfHtml/HTML5ElementsAndAttributes/GlobalArrributes/TheElementsOfspellcheck.html
+++ b/Html5+Css3/Html5/BasicOfHtml/HTML5ElementsAndAttributes/GlobalArrributes/TheElementsOfspellcheck.html
@@ -2,11 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Use html output hello world</title>
+    <title>This page is abouut the elements of spellcheck</title>
+
 </head>
 <body>
-<p>hello world!!!</p>
-
 
 </body>
 </html>
