--- a/Html5+Css3/Html5/BasicOfHtml/HTML5ElementsAndAttributes/GlobalArrributes/TheElementsOfspellcheck.html
+++ b/Html5+Css3/Html5/BasicOfHtml/HTML5ElementsAndAttributes/GlobalArrributes/TheElementsOfspellcheck.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>This page is abouut the elements of spellcheck</title>
-
+<!--    The spellcheck property focuses on the input element and textarea text box input Settings,verifying input text and checking syntax-->
 </head>
 <body>
+<h3>spellcheck</h3>
+<p>sellcheck的属性值为：true</p><br>
+<textarea spellcheck="true">This is a text area</textarea><br>
+<p>sellcheck的属性值为：false</p><br>
+<textarea spellcheck="false">This is a text area</textarea><br>
 
 </body>
 </html>
