--- a/Html5+Css3/Html5/BasicOfHtml/HTML5ElementsAndAttributes/GlobalArrributes/TheElementsOfhidden.html
+++ b/Html5+Css3/Html5/BasicOfHtml/HTML5ElementsAndAttributes/GlobalArrributes/TheElementsOfhidden.html
@@ -11,8 +11,7 @@
 <button onclick="">click me</button>
 <script>
   function myFunction(){
-    documen.getElementById("demo").innerHTML;
-    demo.style.hidden="true";
+      document.getElementById("demo").innerHTML;
   }
 </script>
 </body>
