--- a/Html5+Css3/Html5/BasicOfHtml/HTML5ElementsAndAttributes/GlobalArrributes/TheElementsOfspellcheck.html
+++ b/Html5+Css3/Html5/BasicOfHtml/HTML5ElementsAndAttributes/GlobalArrributes/TheElementsOfspellcheck.html
@@ -7,9 +7,9 @@
 </head>
 <body>
 <h3>spellcheck</h3>
-<p>sellcheck的属性值为：true</p><br>
+<p>spellcheck的属性值为：true</p><br>
 <textarea spellcheck="true">This is a text area</textarea><br>
-<p>sellcheck的属性值为：false</p><br>
+<p>spellcheck的属性值为：false</p><br>
 <textarea spellcheck="false">This is a text area</textarea><br>
 
 </body>
