--- a/Html5+Css3/CSS3/BasicOfCSS/CssCoreBasic/IntroduceCssStyleSheets/TheStyleOfBuiltInType.html
+++ b/Html5+Css3/CSS3/BasicOfCSS/CssCoreBasic/IntroduceCssStyleSheets/TheStyleOfBuiltInType.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>How to use the style of built in type</title>
+    <style>
+        h2{
+            text-align: center;
+        }
+    </style>
+
 </head>
 <body>
-$END$
+<h2>This is a h2 tag</h2>
 </body>
 </html>
