--- a/Html5+Css3/CSS3/BasicOfCSS/CssCoreBasic/IntroduceCssStyleSheets/TheStyleOfChainInType.html
+++ b/Html5+Css3/CSS3/BasicOfCSS/CssCoreBasic/IntroduceCssStyleSheets/TheStyleOfChainInType.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>How to use the style of chain in type</title>
+  <link rel="stylesheet" href="TheStyleOfChainInType.css">
 </head>
 <body>
-$END$
+<h2>This is a h2 tag</h2>
 </body>
 </html>
