--- a/Html5+Css3/CSS3/BasicOfCSS/CssCoreBasic/CssBaseSelector/TheSelectorOfMark.html
+++ b/Html5+Css3/CSS3/BasicOfCSS/CssCoreBasic/CssBaseSelector/TheSelectorOfMark.html
@@ -6,9 +6,14 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>The selector of mark</title>
+    <style>
+        P{
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
-<p></p>
+<p>This is the p tag</p>
 
 </body>
 </html>
