--- a/Html5+Css3/CSS3/BasicOfCSS/TextStyleAttributes/TextAppearanceAttribute/white-space.html
+++ b/Html5+Css3/CSS3/BasicOfCSS/TextStyleAttributes/TextAppearanceAttribute/white-space.html
@@ -3,12 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>white-space</title>
+<!--    Not the common tag,when you write the log you can use it.-->
   <style>
     p{
       /*It means none*/
       white-space: normal;
     /*  It means based on the text*/
-
+        white-space: pre;
+    /*    It means when it comes to br to change the line*/
+        white-space: nowrap;
     }
   </style>
 </head>
