--- a/Html5+Css3/CSS3/CSS3Selectors/PsudoClassSelector/:not.html
+++ b/Html5+Css3/CSS3/CSS3Selectors/PsudoClassSelector/:not.html
@@ -2,21 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>:root</title>
-<!--  It has the same effects with body-->
+    <title>:not</title>
   <style>
-    :root{
+    body *:not(h2){
+      color: red;
       text-align: center;
-      color: pink;
-    }
-    p{
-      color: aqua;
     }
   </style>
 </head>
 <body>
-<h2>This is a h2 tag.</h2>
 <p>This is a p tag</p>
+<h2>This is a h2 tag</h2>
 
 </body>
 </html>
