--- a/Html5+Css3/CSS3/CSSBox/CSSBoxAttribute/TheAttributeOfBorder/border-style.html
+++ b/Html5+Css3/CSS3/CSSBox/CSSBoxAttribute/TheAttributeOfBorder/border-style.html
@@ -3,8 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <title>border-style</title>
+    <style>
+        h2 {
+            border-style: double;
+        }
+
+        .one {
+            border-style: dotted solid;
+        }
+
+        .two {
+            border-style: solid dotted dashed;
+        }
+    </style>
+
+
 </head>
 <body>
-
+<h2>border-style:bouble</h2>
+<div class="one">border-style:The top and the bottom are dotted,the left and the right are solid.</div>
+<div class="two">border-style:The top is solid,the left and the right are dotted,the bottom is dashed.</div>
 </body>
 </html>
