--- a/Html5+Css3/CSS3/CSSBox/CSSBoxAttribute/TheAttributeOfBorder/border-image.html
+++ b/Html5+Css3/CSS3/CSSBox/CSSBoxAttribute/TheAttributeOfBorder/border-image.html
@@ -5,7 +5,18 @@
     <title>border-image</title>
   <style>
     div{
+		/* Set the source of image url */
       /*border-image-source: url("");*/
+	  /* set the slice(Æ«ÒÆÁ¿) of image */
+	  border-image-slice: 33%;
+	  /* Set border width */
+	  border-width: 41px;
+	  /* Set image-setout(±ß¿òÍ¼Æ¬ÇøÓò³¬³ö±ß¿òÁ¿) */
+	  
+        
+
+
+
 
     }
   </style>
