--- a/Html5+Css3/CSS3/CSSBox/CSSBoxAttribute/TheAttributeOdBox-shadow/box-shadow.html
+++ b/Html5+Css3/CSS3/CSSBox/CSSBoxAttribute/TheAttributeOdBox-shadow/box-shadow.html
@@ -3,8 +3,12 @@
 	<head>
 		<meta charset="utf-8">
 		<title>box-shadow</title>
+		<style>
+
+		</style>
 	</head>
 	<body>
+	<div><p>This is a p tag</p></div>
 		
 	</body>
 </html>
