--- a/Html5+Css3/CSS3/CSSBox/CSSBoxAttribute/TheAttributeOdBox-shadow/box-shadow.html
+++ b/Html5+Css3/CSS3/CSSBox/CSSBoxAttribute/TheAttributeOdBox-shadow/box-shadow.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<title>box-shadow</title>
-		<style>
+<head>
+    <meta charset="utf-8">
+    <title>box-shadow</title>
+    <style>
 
-		</style>
-	</head>
-	<body>
-	<div><p>This is a p tag</p></div>
-		
-	</body>
+
+    </style>
+</head>
+<body>
+<div class="one">
+    <p>This is a p tag</p>
+</div>
+
+</body>
 </html>
