--- a/Html5+Css3/CSS3/CSSBox/CSSBoxAttribute/TheAttributeOdBox-shadow/box-shadow.html
+++ b/Html5+Css3/CSS3/CSSBox/CSSBoxAttribute/TheAttributeOdBox-shadow/box-shadow.html
@@ -4,14 +4,20 @@
     <meta charset="utf-8">
     <title>box-shadow</title>
     <style>
-
-
+        .one{
+            width: 100px;
+            height: 50px;
+            margin: 0 auto;
+            box-shadow: 20px 20px 20px 20px red inset;
+        }
     </style>
 </head>
 <body>
 <div class="one">
     <p>This is a p tag</p>
-</div>
+	
 
+</div>
 </body>
+
 </html>
