--- a/Html5+Css3/Form/FormAttribute/input/type.html
+++ b/Html5+Css3/Form/FormAttribute/input/type.html
@@ -8,6 +8,22 @@
 <!--常见type属性值
     text：文本框(用来输入简短的信息，如用户名、姓名、)
     password:密码框(一般抓门用来输入密码)
+    radio单选按钮（用于选择性别、是否操作等，在定义选项时，需要为同一组属性）
+    checkbox（复选框常用于多项选择，如选择兴趣爱好等，可对其应用checked属性，指定默认选项）
+    button（普通按钮，一般搭配js使用）
+    submit（提交按钮，一般输入信息后，一般需要单击提交按钮才能完成表单提交，可以规定其value属性，改变提交按钮的默认文本。）
+    reset（重置按钮，当表单提交信息有误时，可单击重置按钮取消已输入的信息，可以guiding其value属性，改变其默认文本）
+    image（图片形式的提交按钮，与基本按钮一样，只是用图片替代了默认的按钮样式，必须为其定义src属性指定图片的地址）
+    hidden(隐藏域，对于用户不可见，通常用于后台程序)
+    file（文件域，页面中将出现一个文本框和一个浏览按钮，用户可以通过写入文件路径或直接选择文件的方式，将文件提交给后台服务器）
+    e-mail(e-mail类型的元素专门用于输入e-mail地址的文本输入框，用来验证输入的e-mail邮箱地址)
+    url(url类型的input元素是一种用于输入URL地址的文本框，如果输入的是url地址，则就会提交到服务器，输入的url地址不符合，则不会提交，并且会有提交信息。)
+    tel（tel类型用于提供输入的电话号码的文本框，一般会和pattern属性一起使用）
+    search(search类型是专门用来输入关键词的文本框，能自动记录一些字符，如站点搜索或者google搜索，在用户输入一些内容时，右侧会附带一个删除图标，
+    点击按钮可以快速清除内容。)
+
+
+
 
 -->
 
