--- a/Html5+Css3/Form/FormAttribute/input/type.html
+++ b/Html5+Css3/Form/FormAttribute/input/type.html
@@ -21,10 +21,23 @@
     tel（tel类型用于提供输入的电话号码的文本框，一般会和pattern属性一起使用）
     search(search类型是专门用来输入关键词的文本框，能自动记录一些字符，如站点搜索或者google搜索，在用户输入一些内容时，右侧会附带一个删除图标，
     点击按钮可以快速清除内容。)
-
-
-
-
+    color(color类型用于设定颜色的文本框，用于实现一个RGB颜色输入，基本形式为：#RRGGBB,#000000，通过改变其value属性值可以改变其默认颜色，单机颜色类型文本框，
+    可以快速打开拾色器面板，方便用户选择一种颜色)
+    number(number类型用于输入数值的文本框，在提交时，会自动检索输入信息是否是数字，如果输入不是数字或者不在范围内，则提示错误。
+    可以加入一下限制条件：
+    value：制定输入框的内容
+    max:限制输入框的最大值
+    min:限制输入框的最小值
+    step:输入域合法的间隔，若不设置，默认为1)
+    range(range类型的input元素用于提供数值的输入范围，在网页中显示为滑动条，他的属性与number类型一样，通过min和max属性，，可以设置最小值和最大值的范围，step属性可以
+    指定每次滑动的不敷)
+    Data Pickers（Data Pickers类型是指时间日期类型，h5中能够提供多个选择：
+    date:选取年，月，日
+    month:选取月，年
+    week:选取周和年
+    time:选取时间(小时和分钟)
+    datetime:(选取时间、日、月、年（UTC时间）)
+    datetime-local：（选取时间、日、月、年（本地时间）） ）
 -->
 
 
