--- a/Html5+Css3/Form/MakeInformationTable/MakeInformationTable.html
+++ b/Html5+Css3/Form/MakeInformationTable/MakeInformationTable.html
@@ -6,24 +6,29 @@
   <link rel="stylesheet" href="MakeInformationTable.css">
 </head>
 <body>
-<form action="#" method="get" autocomplete="off">
-  <h2>传智学生信息登记表</h2>
-  <p>
-    <span>用户登录名:</span>
-    <input type="text">
-  </p>
-  <p><span></span></p>
-  <p><span></span></p>
-  <p><span></span></p>
-  <p><span></span></p>
-  <p><span></span></p>
-  <p><span></span></p>
-  <p><span></span></p>
-  <p><span></span></p>
-  <p><span></span></p>
-</form>
-  
-</p>
-
+<div class="bg">
+  <form action="#" method="get" autocomplete="off">
+    <h2>传智学员信息登记表</h2>
+    <p><span>用户登录名:</span><input type="text" name="user_name" value="1994843581@qq.com" disabled="disabled" readonly="readonly"></p>
+    <p><span>真实姓名:</span><input type="text" name="real_name" pattern="^[\u4e00-\u9fa5]{0,}$" placeholder="例如:王明" required="required" autofocus="autofocus">(必须填写，只能填写中文)</p>
+    <p><span>真实年龄:</span><input type="number" name="real_lage" value="24" min="15" max="120" required="required">(必须填写)</p>
+    <p><span>电子邮件:</span><input type="email" name="myemail" placeholder="1994843581@qq.com">(必须填写)</p>
+    <p><span>出生日期:</span><input type="date" name="birthday" value="2003-09-27" required="required">(必须填写)</p>
+    <p><span>身份证号:</span><input type="text" name="card" required="required" pattern="^\d{8，18} | [0-9x]{8,18} | [0-9x]{8,18}?$">(必须填写，能够填写以数字、x结尾的身份证)</p>
+    <p><span>手机号码:</span><input type="tel" name="telphone" pattern="^\d{11}$" required="required">(必须填写)</p>
+    <p><span>个人主页:</span><input type="url" name="myurl" placeholder="http://www.jha123.icu" list="urllist" pattern="^http://([\w-]+\.)+[\w-]+(/[\w-./?%&]*)?$"/>(请选择网址)
+    <datalist id="urllist">
+      <option value="">http://www.jha123.icu</option>
+      <option value="">http://www.baidu.com</option>
+      <option value="">http://www.jha123.fun</option>
+    </datalist>
+    </p>
+    <p class="lucky"><span>幸运颜色:</span><input type="color" name="lovecolor" value="#FED000">(请选择你喜欢的颜色)</p>
+    <p class="btn">
+      <input type="submit" value="提交">
+      <input type="reset" value="重置">
+    </p>
+  </form>
+</div>
 </body>
 </html>
