--- a/JavaScript/BasicOfJavaScript/MultibranchStructure(多分支结构)/switch.html
+++ b/JavaScript/BasicOfJavaScript/MultibranchStructure(多分支结构)/switch.html
@@ -33,6 +33,20 @@
     document.write("你输入的数字是:",day,"<br>")
     document.write("今天是:",flag)
 </script>
+<script>
+    var weekday = parseInt(prompt("请输入一个数字:"))
+    switch (weekday) {
+        case "1":
+            document.write("今天是周一，开始工作了！！！")
+            break;
+        case "5":
+            document.write("今天是周五，明天就可以休息了！！！")
+            break;
+        default :
+            document.write("还需要继续努力！！！")
+            break;
+    }
+</script>
 
 </body>
 </html>
