--- a/jQuary/BasicjQuary/Selector/FilterSelector/AttributeFilterSelector/AttributeFilterSelector.html
+++ b/jQuary/BasicjQuary/Selector/FilterSelector/AttributeFilterSelector/AttributeFilterSelector.html
@@ -2,9 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>AttributeFilterSelector</title>
 </head>
 <body>
+<script src="/jQuary/Packages/jquery-3.6.3.min.js"></script>
+<script>
+
+
+</script>
 
 </body>
 </html>
