--- a/Html5+Css3/E-commerceProjectPractice(电商项目实战)/E-commerceProjectPractice.html
+++ b/Html5+Css3/E-commerceProjectPractice(电商项目实战)/E-commerceProjectPractice.html
@@ -185,7 +185,7 @@
         <form>
             <ul class="left">
                 <li>
-                    <p><label for="">姓名：</label></p>
+                    <p><label>姓名：</label></p>
                     <input type="text">
                 </li>
                 <li>
