--- a/BootStrap/BootStrapFormAndModule/Form/FormCheck/ColorRemind.html
+++ b/BootStrap/BootStrapFormAndModule/Form/FormCheck/ColorRemind.html
@@ -3,8 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <title>ColorRemind</title>
+    <link rel="stylesheet" href="/BootStrap/bootstrap-5.1.3-dist/css/bootstrap.min.css">
 </head>
 <body>
+<!--BootStrap对表单控件的校验状态都定义了，例如(警告，成功，错误)-->
+<form class="has-error">
+<!--    表示错误：提示红色-->
+    <div class="has-feedback">
+<!--        表示有反馈-->
+        <label for="username">label</label>
+        <div class="input-group">
+            <input type="....." class="form-control" id="username">
+        </div>
+    </div>
+</form>
+
 
 </body>
 </html>
