--- a/BootStrap/BootStrapFormAndModule/Form/Input/BootStrapBasicInput.html
+++ b/BootStrap/BootStrapFormAndModule/Form/Input/BootStrapBasicInput.html
@@ -7,5 +7,22 @@
 	</head>
 	<body>
 		<!-- BootStrapBasicInput -->
+		<div class="container">
+			<div class="input-group">
+				<span class="input-group-addon" id="basic-addon1">@</span>
+				<input type="text" class="form-group" aria-describedby="basic-addon1" placeholder="Username">
+			</div>
+			<br>
+			<div class="input-group">
+				<input type="text" class="form-control" placeholder="Recipient's username" aria-describedby="basic-adon2">
+				<span class="input-group-addon" id="basic-addon2">@example.com</span>
+			</div>
+			
+			
+			
+			
+		
+			
+		</div>
 	</body>
 </html>
