--- a/vue/Basic/Defind/Demo02.html
+++ b/vue/Basic/Defind/Demo02.html
@@ -7,16 +7,20 @@
 </head>
 <body>
 <div id="test">
-    <p>{{msg}}</p>
+    {{msg}}
 </div>
 <!--创建vue实例对象-->
 <script>
-    let vm = new Vue ({
-        el : '#test',
-        data : {
-            msg : 'hello world'
+<!--    创建一个js对象-->
+const HelloApp =  {
+    data() {
+        return {
+            msg : "HelloVUE3"
         }
-    });
+    }
+}
+// 绑定vue实例对象
+Vue.createApp(HelloApp).mount("#test")
 </script>
 </body>
 </html>
