--- a/ECAMScript6/ArrayExpand/ArrayOf.html
+++ b/ECAMScript6/ArrayExpand/ArrayOf.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-<!--  Array.of()用于将一组数转化为数组，存在的意义时替代以构造函数的形式创建数组，修复数组创建因参数不一致而导致表现形式不同的伪bug-->
+<!--  ArrayObject.of()用于将一组数转化为数组，存在的意义时替代以构造函数的形式创建数组，修复数组创建因参数不一致而导致表现形式不同的伪bug-->
 //   原始方法
 new Array();
 new Array(2);
