--- a/vue/Basic/VUE3Plugins/Mixins/OptionMerge.html
+++ b/vue/Basic/VUE3Plugins/Mixins/OptionMerge.html
@@ -40,6 +40,7 @@ const myMixin = {
 }
 // 创建实例对象
 const app = Vue.createApp({
+    mixins : [myMixin],
     created() {
         console.log('app')
     }
