--- a/VUEDemo/Basic/VUE3Plugins/Vue3TransitionsAndAnimations/EnterAndCloseTransition/CSSTransition.html
+++ b/VUEDemo/Basic/VUE3Plugins/Vue3TransitionsAndAnimations/EnterAndCloseTransition/CSSTransition.html
@@ -3,6 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <title>CSSTransition</title>
+  <style>
+    .slide-fade-enter-active {
+      transition: all 0.3s ease-out;
+    }
+    .slide-fade-leave-active {
+      transition: all 0.8s cubic-bezier(1 , 0.5 , 0.8 , 1);
+    }
+    .slide-fade-enter-from ,
+    .slide-fade-leave-to{
+      transform: translateX(20px);
+      opacity: 0;
+    }
+  </style>
+  <script src="/VUEDemo/Package/vue3.2.47.global.js"></script>
 </head>
 <body>
 <!--
@@ -15,7 +29,23 @@ v-leave-from                                        Define leave transition fini
 v-leave-active                                      Define leave transition run status
 v-leave-to                                          Define leave transition finish
 -->
-
-
+<div id="demo">
+  <button @click="show = !show">
+    Toggle render
+  </button>
+</div>
+<transition name="slide-fade">
+  <p v-if="show">hello</p>
+</transition>
+<script>
+  const Demo = {
+    data() {
+      return {
+        show : true
+      }
+    }
+  }
+  Vue.createApp.mount("#demo")
+</script>
 </body>
 </html>
