--- a/VUEDemo/Basic/VUE3Plugins/Vue3TransitionsAndAnimations/EnterAndCloseTransition/JavaScriptHook.html
+++ b/VUEDemo/Basic/VUE3Plugins/Vue3TransitionsAndAnimations/EnterAndCloseTransition/JavaScriptHook.html
@@ -5,17 +5,9 @@
     <title>JavaScript Hook</title>
 </head>
 <body>
-<transition
-        @before-enter="beforeEnter"
-        @enter="enter"
-        @after-enter=""
+<div id="demo">
+    <button @click="show = !show">Toggle</button>
 
-
-
-
-
->
-</transition>
-
+</div>
 </body>
 </html>
